deploy_apis_pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-apis
  labels:
    app: tp-apis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tp-apis
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: tp-apis
    spec:
      volumes:
        - name: tp-mongo-data-pv
          persistentVolumeClaim:
            claimName: transportugalvolume
        - name: tp-rabbitmq-conf-pv
          persistentVolumeClaim:
            claimName: tp-mongo-data
        - name: tp-rabbitmq-def-pv
          persistentVolumeClaim:
            claimName: odoo-app-data
        - name: tp-rabbitmq-mnesia-pv
          persistentVolumeClaim:
            claimName: odoo-app-data
        - name: tp-rabbitmq-log-pv
          persistentVolumeClaim:
            claimName: odoo-app-data
      restartPolicy: Always
      #hostname: tprabbitmq
      containers:
      - name: tpmongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
            - mountPath: /data/db
              name: tp-mongo-data-pv
      - name: tprabbitmq
        image: rabbitmq:3.9-management
        ports:
            - containerPort: 5672
            - containerPort: 15672
        volumeMounts:
            - mountPath: /etc/rabbitmq/rabbitmq.conf
              name: tp-rabbitmq-conf-pv
            - mountPath: /etc/rabbitmq/definitions.json
              name: tp-rabbitmq-def-pv
            - mountPath: /var/lib/rabbitmq/mnesia
              name: tp-rabbitmq-mnesia-pv
            - mountPath: /var/log/rabbitmq
              name: tp-rabbitmq-log-pv
      imagePullSecrets:
      - name: do-photos-registry-secret
