discourse_deploy_pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp-discourse
  labels:
    app: tp-discourse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tp-discourse
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: tp-discourse
    spec:
      volumes:
        - name: tp-discourse-pv
          persistentVolumeClaim:
            claimName: tp-discourse-data
        - name: tp-discourse-sidekiq-pv
          persistentVolumeClaim:
            claimName: tp-discourse-sidekiq-data
      restartPolicy: Always
      hostname: tpdiscoursepod
      containers:
      - name: tpdiscoursebase
        image: docker.io/discourse/base
        ports:
            - containerPort: 3000
      - name: tpdiscourseredis
        image: docker.io/bitnami/redis:6.0
        ports:
        - containerPort: 6379
      - name: tpdiscourse
        image: docker.io/bitnami/discourse:2
        ports:
            - containerPort: 3005
        volumeMounts:
            - mountPath: /bitnami/discourse
              name: tp-discourse-pv
      - name: tpdiscoursesidekiq
        image: docker.io/bitnami/discourse:2
        command: ["/opt/bitnami/scripts/discourse-sidekiq/run.sh"]
        volumeMounts:
            - mountPath: /bitnami/discourse
              name: tp-discourse-sidekiq-pv
