frontoffice_kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transportugal-frontoffice
  labels:
    app: transportugal-frontoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transportugal-frontoffice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: transportugal-frontoffice
    spec:
      containers:
      - name: transportugal-frontoffice
        image: <FRONTOFFICE_IMAGE>
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: do-photos-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: transportugal-frontoffice-service
  labels:
    run: transportugal-frontoffice-service
spec:
  ports:
    - port: 40000
      targetPort: 3000
  selector:
    app: transportugal-frontoffice
---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: transportugal-frontoffice-nginx-controller
#  annotations:
#      kubernetes.io/ingress.class: nginx
#      cert-manager.io/cluster-issuer: letsencrypt-prod
#      service.beta.kubernetes.io/do-loadbalancer-protocol: https
#      service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
#spec:
#  tls:
#  - hosts:
#    - tp.chain-of-change.com
#    secretName: transportugal-frontoffice-tls-secret
#  rules:
#  - host: tp.chain-of-change.com
#    http:
#      paths:
#      - backend:
#          serviceName: transportugal-frontoffice-service
#          servicePort: 40000
