backoffice_kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transportugal-backoffice
  labels:
    app: transportugal-backoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transportugal-backoffice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: transportugal-backoffice
    spec:
      containers:
      - name: transportugal-backoffice
        image: <BACKOFFICE_IMAGE>
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: do-photos-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: transportugal-backoffice-service
  labels:
    run: transportugal-backoffice-service
spec:
  ports:
    - port: 40010
      targetPort: 3000
  selector:
    app: transportugal-backoffice
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: transportugal-backoffice-nginx-controller
  annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt-prod
      service.beta.kubernetes.io/do-loadbalancer-protocol: https
      service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
spec:
  tls:
  - hosts:
    - tpback.chain-of-change.com
    secretName: transportugal-backoffice-tls-secret
  rules:
  - host: tpback.chain-of-change.com
    http:
      paths:
      - backend:
          serviceName: transportugal-backoffice-service
          servicePort: 40010
