discourse_ingresses.yml
apiVersion: v1
kind: Service
metadata:
  name: tpdiscourse-redis-headless
  labels:
    app.kubernetes.io/instance: tpdiscourse
    app.kubernetes.io/name: redis
  annotations:
    meta.helm.sh/release-name: tpdiscourse
spec:
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: tpdiscourse
    app.kubernetes.io/name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: tpdiscourse-redis-master-service
  labels:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: tpdiscourse
    app.kubernetes.io/name: redis
  annotations:
    meta.helm.sh/release-name: tpdiscourse
spec:
  ports:
    - name: tcp-redis
      protocol: TCP
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/instance: tpdiscourse
    app.kubernetes.io/name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: tp-discourse-service
  labels:
    run: tp-discourse-service
spec:
  ports:
    - port: 31020
      targetPort: 3000
  selector:
    app: tp-discourse
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp-discourse-ingress-nginx-controller
  annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: letsencrypt-prod
      service.kubernetes.io/do-loadbalancer-protocol: https
      service.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
spec:
  tls:
  - hosts:
    - tpdiscourse.chain-of-change.com
    secretName: tp-discourse-letsencrypt-crt-secret
  rules:
  - host: tpdiscourse.chain-of-change.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: tp-discourse-service
            port:
              number: 31020
